# agentrouter

./: LICENSE  README.md  __init__.py  client.py  example.py  n8n-curl.md  pyproject.toml
agentrouter_sdk.egg-info/: PKG-INFO  SOURCES.txt
