[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentrouter-sdk"
version = "0.1.0"
description = "Простой SDK для работы с AgentRouter API"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "AgentRouter Team"}
]
keywords = ["ai", "api", "agentrouter", "llm", "deepseek"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/roman-prizrakjj/agentrouter"
Repository = "https://github.com/roman-prizrakjj/agentrouter"
